# bazel-most-basic

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bazel-most-basic  bazel-bin  bazel-out  bazel-testlogs  my_build_tool.py  my_custom_rule.bzl  my_input_file.txt
docs/: step1.md  step2.md  step3.md  step4.md  step5.md  step6.md  step7.md
